--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,117 +1,144 @@
-/* @import "oxocarbon.css"; */
-/* @import "mocha.css"; */
 @import "macchiato.css";
 
 * {
-    font-family: "JetBrainsMono Nerd Font";
-    font-size: 12px;
-    min-height: 0;
-    font-weight: bold;
+  font-family: "JetBrainsMono Nerd Font", Roboto, Helvetica, Arial, sans-serif;
+  font-size: 16px;
 }
 
 window#waybar {
-    background-color: shade(@base, 0.9);
-    color: @foreground;
-    transition-property: background-color;
-    transition-duration: 0.1s;
-}
-
-#window {
-    margin: 2;
-    padding-left: 8;
-    padding-right: 8;
+  background-color: rgba(0, 0, 0, 0);
+  border-radius: 13px;
+  transition-property: background-color;
+  transition-duration: .5s;
 }
 
 button {
-    box-shadow: inset 0 -3px ;
-    border: none;
-    border-radius: 0;
+  /* Use box-shadow instead of border so the text isn't offset */
+  box-shadow: inset 0 -3px transparent;
+  /* Avoid rounded borders under each button name */
+  border: none;
+  border-radius: 0;
 }
 
+/* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
 button:hover {
-    background: inherit;
-    border-top: 2px solid @hover;
+  background: inherit;
+  box-shadow: inset 0 -3px #ffffff;
+}
+
+/* you can set a style on hover for any module like this */
+#pulseaudio:hover {
+  background-color: @surface2;
 }
 
 #workspaces button {
-    padding: 0 4px;
+  padding: 0 5px;
+  background-color: transparent;
+  color: #ffffff;
 }
 
-#workspaces button.focused {
-    background-color: rgba(0, 0, 0, 0.3);
-    color: @blue;
-    border-top: 2px solid @blue;
+
+#workspaces button:hover {
+  background: rgba(0, 0, 0, 0.2);
+}
+
+#workspaces button.active {
+
+  box-shadow: inset 0 -3px #ffffff;
 }
 
 #workspaces button.urgent {
-    background-color: #eb4d4b;
+  background-color: #eb4d4b;
 }
 
-#pulseaudio,
+
+#mode {
+  background-color: #64727D;
+  box-shadow: inset 0 -3px #ffffff;
+}
+
 #clock,
 #battery,
 #cpu,
 #memory,
-#disk,
 #temperature,
-#backlight,
-#wireplumber,
-#tray,
-#mode,
-#scratchpad {
-    margin: 2px;
-    padding-left: 4px;
-    padding-right: 4px;
-}
-
-#clock {
-    color: @maroon;
-    border-bottom: 2px solid @maroon;
-}
-
-#clock.date {
-    color: @mauve;
-    border-bottom: 2px solid @mauve;
+#network,
+#pulseaudio {
+  padding: 0 10px;
 }
 
 #pulseaudio {
-    color: @blue;
-    border-bottom: 2px solid @blue;
+  color: @maroon;
 }
 
 #network {
-    color: @yellow;
-    border-bottom: 2px solid @yellow;
+  color: @yellow;
 }
 
-#idle_inhibitor {
-    margin-right: 12px;
-    color: #7cb342;
+#temperature {
+  color: @sky;
 }
 
-#idle_inhibitor.activated {
-    color: @red;
+#battery {
+  color: @green;
+}
+
+#clock {
+  color: @peach;
+}
+#clock.date {
+  color: @flamingo;
+}
+
+#window {
+  color: @rosewater;
+}
+
+.modules-right,
+.modules-left,
+.modules-center {
+  background-color: @base;
+  border-radius: 15px;
+}
+
+.modules-right {
+  padding: 0 10px;
+}
+
+.modules-left {
+  padding: 0 20px;
+}
+
+.modules-center {
+  padding: 0 10px;
 }
 
 #battery.charging,
 #battery.plugged {
-    color: @green;
-    border-bottom: 2px solid @green;
+  color: @sapphire;
 }
 
-/* If workspaces is the leftmost module, omit left margin */
-.modules-left>widget:first-child>#workspaces {
-    margin-left: 0;
+@keyframes blink {
+  to {
+    color: #000000;
+  }
 }
 
-/* If workspaces is the rightmost module, omit right margin */
-.modules-right>widget:last-child>#workspaces {
-    margin-right: 0;
+/* Using steps() instead of linear as a timing function to limit cpu usage */
+#battery.critical:not(.charging) {
+  background-color: #f53c3c;
+  color: #ffffff;
+  animation-name: blink;
+  animation-duration: 0.5s;
+  animation-timing-function: steps(12);
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
 }
 
-#custom-vpn {
-    color: @lavender;
-    border-radius: 15px;
-    padding-left: 6px;
-    padding-right: 6px;
+label:focus {
+  background-color: #000000;
+}
+
+#pulseaudio.muted {
+  color: @text;
 }
