--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,144 +1,118 @@
+/* @define-color bg0 #212121; */
+/*@define-color base #353535;*/
+/*@define-color base rgba(33,33,33,0.8);*/
+@define-color base #212121;
+@define-color text #eeffff;
+@define-color yellow #ffcb6b;
+
 @import "macchiato.css";
 
 * {
-  font-family: "JetBrainsMono Nerd Font", Roboto, Helvetica, Arial, sans-serif;
-  font-size: 16px;
+  font-family: JetBrains Mono;
+  font-size: 14px;
+  font-weight: 500;
+  min-height: 0;
+  border-color: @text;
 }
 
 window#waybar {
-  background-color: rgba(0, 0, 0, 0);
-  border-radius: 13px;
-  transition-property: background-color;
-  transition-duration: .5s;
+  /* background-color: @bg0; */
+  background-color: transparent;
+  color: @text; /* didn't affect workspaces */
 }
 
-button {
-  /* Use box-shadow instead of border so the text isn't offset */
-  box-shadow: inset 0 -3px transparent;
-  /* Avoid rounded borders under each button name */
-  border: none;
-  border-radius: 0;
-}
-
-/* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
-button:hover {
-  background: inherit;
-  box-shadow: inset 0 -3px #ffffff;
-}
-
-/* you can set a style on hover for any module like this */
-#pulseaudio:hover {
-  background-color: @surface2;
+#workspaces {
+  background-color: @base;
+  border-radius: 18px;
+  padding: 0px 4px;
+  /* margin: 4px 4px 4px 8px; */
+  margin: 8px 4px 0px 8px;
 }
 
 #workspaces button {
   padding: 0 5px;
   background-color: transparent;
+  border-radius: 0px;
+  border-color: transparent;
   color: #ffffff;
 }
 
 
-#workspaces button:hover {
-  background: rgba(0, 0, 0, 0.2);
-}
-
 #workspaces button.active {
-
   box-shadow: inset 0 -3px #ffffff;
-}
 
-#workspaces button.urgent {
-  background-color: #eb4d4b;
 }
 
 
-#mode {
-  background-color: #64727D;
-  box-shadow: inset 0 -3px #ffffff;
+#window {
+  background-color: @base;
+  border-radius: 18px;
+  padding: 0px 16px;
+  /* margin: 4px; */
+  margin: 8px 4px 0px 4px;
 }
 
-#clock,
-#battery,
-#cpu,
-#memory,
-#temperature,
-#network,
-#pulseaudio {
-  padding: 0 10px;
+window#waybar.empty #window {
+  /* hide empty module */
+  background-color: transparent;
 }
 
-#pulseaudio {
-  color: @maroon;
+#tray {
+  background-color: @base;
+  border-radius: 18px;
+  padding: 0px 16px;
+  /* margin: 4px; */
+  margin: 8px 4px 0px 4px;
 }
 
-#network {
-  color: @yellow;
+#hw {
+  background-color: @base;
+  border-radius: 18px;
+  padding: 0px 16px;
+  /* margin: 4px; */
+  margin: 8px 4px 0px 4px;
+}
+
+#cpu {
+  margin-right: 8px;
 }
 
 #temperature {
-  color: @sky;
+  margin: 0px 8px;
+}
+
+#memory {
+  margin-left: 8px;
+}
+
+#control {
+  background-color: @base;
+  border-radius: 18px;
+  padding: 0px 16px;
+  /* margin: 4px; */
+  margin: 8px 4px 0px 4px;
 }
 
 #battery {
-  color: @green;
+  margin-right: 8px;
+}
+
+#network {
+  margin: 0px 8px;
+}
+
+#bluetooth {
+  margin: 0px 8px;
+}
+
+#pulseaudio {
+  margin-left: 8px;
 }
 
 #clock {
-  color: @peach;
-}
-#clock.date {
-  color: @flamingo;
-}
-
-#window {
-  color: @rosewater;
-}
-
-.modules-right,
-.modules-left,
-.modules-center {
   background-color: @base;
-  border-radius: 15px;
-}
-
-.modules-right {
-  padding: 0 10px;
-}
-
-.modules-left {
-  padding: 0 20px;
-}
-
-.modules-center {
-  padding: 0 10px;
-}
-
-#battery.charging,
-#battery.plugged {
-  color: @sapphire;
-}
-
-@keyframes blink {
-  to {
-    color: #000000;
-  }
-}
-
-/* Using steps() instead of linear as a timing function to limit cpu usage */
-#battery.critical:not(.charging) {
-  background-color: #f53c3c;
-  color: #ffffff;
-  animation-name: blink;
-  animation-duration: 0.5s;
-  animation-timing-function: steps(12);
-  animation-iteration-count: infinite;
-  animation-direction: alternate;
-}
-
-label:focus {
-  background-color: #000000;
-}
-
-#pulseaudio.muted {
-  color: @text;
+  border-radius: 18px;
+  padding: 0px 16px;
+  /* margin: 4px 8px 4px 4px; */
+  margin: 8px 8px 0px 4px;
 }
