--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,7 +1,7 @@
 @import "catppuccin_frappe.css";
 
 * {
-  font-family: JetBrains Mono;
+  font-family: Noto Sans;
   font-size: 14px;
   font-weight: 500;
   min-height: 0;
