--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,7 +1,7 @@
 @import "catppuccin_frappe.css";
 
 * {
-  font-family: Noto Sans;
+  font-family: JetBrains Mono Nerd Font;
   font-size: 14px;
   font-weight: 500;
   min-height: 0;
@@ -32,6 +32,11 @@ window#waybar {
 
 
 #workspaces button.active {
+  box-shadow: inset 0 -3px #ffffff;
+
+}
+
+#workspaces button.focused {
   box-shadow: inset 0 -3px #ffffff;
 
 }
